bib, some more topics listed

--- a/main.tex
+++ b/main.tex
@@ -46,6 +46,7 @@ List of topics to start writing about:
     \item Haldane phase/conjecture, AFM O(3) NLSM paper.
     \item AKLT model and properties. Identify the VBS ground state as an MPS state.
     \item BLBQ models in general (Affleck's paper) understand the phase diagram and in particular the ULS model (or SU(3) point) and Takhtajan, Fateev, Zamolodchikov model. Understand the mapping to WZW theory. Understand the yang-baxter/integrability pov on these models.
+    \item Connection between spectrum, correlator's behaviour and order/disorder. Also on LRO vs SSB (mermin-wagner).
     \item KT transformation and connection to our mapping.
     \item Dualities (duality webs-witten, senthil)(boson vortex duality, flux threading/attachment)
     \item Krammers Wannier, Jordan Wigner iron out some details.
@@ -57,7 +58,8 @@ List of topics to start writing about:
     \item QFT in 2+1 d- David tong+Zohar lecs
     \item G theorem, boundary RG flow
     \item Hastings entropy Area law for many body , boundary term for topological order-mutual information
-    \item Anomalies 
+    \item Anomalies
+    \item Disordered systems, localization stuff. Check to see if any of the old notes are still around for an extensive topics list. Else see reading list email/message.
 \end{enumerate}
 \section{Lieb-Schultz-Mattis Theorem}
 (Source: Hal Tasaki's lecture)
@@ -123,4 +125,9 @@ Here is some stuff to read about this (from Fradkin chapter 5)
     \item Mapping to the sigma model
 \end{enumerate}
 The mappings provide us with non-perturbative probes of the ground and excited states. Read the refs (witten, polyakov and wiegmann, affleck)
+\section{How does the WZW show up in spin S chains?}
+Sources: \cite{Affleck:1987ch}
+\bibliographystyle{apsrev4-1long}
+\bibliography{bibliography}
+
 \end{document}
