Some initial stuff about AKLT and ULS points

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -8,3 +8,13 @@
     pages = "5291--5300",
     year = "1987"
 }
+@article{itoi1997extended,
+  title={Extended massless phase and the Haldane phase in a spin-1 isotropic antiferromagnetic chain},
+  author={Itoi, Chigak and Kato, Masa-Hide},
+  journal={Physical Review B},
+  volume={55},
+  number={13},
+  pages={8295},
+  year={1997},
+  publisher={APS}
+}
