--- a/main.tex
+++ b/main.tex
@@ -23,6 +23,8 @@
 
 \usepackage[bookmarks = false, colorlinks = true, linkcolor = darkblue, citecolor = purple]{hyperref}
 
+
+\newtheorem{conn}{Connection}
 \renewcommand{\i}{\mathrm{i}}
 \renewcommand{\d}{\mathrm{d}}
 \title{Condensed Matter Diary}
@@ -140,14 +142,20 @@ AKLT (Affleck, Kennedy, Lieb, Tasaki) is a special point in the class of Bilinea
     \item $\mathbb{Z}_2 \times \mathbb{Z}_2$ is the center and the gapped/SPT properties come from it.
     \item  It is integrable. (Check Bethe-Ansatz/Yang-Baxter) \AM{What does this give you?}
 \end{enumerate}
+
+Spin 1 chains also have this decomposition in terms of creation/annihilation ops of U(1), and they have some connection to the chains having twisted boundary conditions.\AM{Vaguely recall this discussion, make it precise}
 \subsection{ULS point}
-To study the (global?) symmetry of these spin chains, it can be useful to convert to the Abrikosov fermion representation. Since we are working with the spin -1 model, we use 3 fermion channels at each site with a local fermion number constraint $\sum^{3}_{\mu = 1} c^{\dagger}_{j, \mu} c_{j, \mu} = 1.$ 
+To study the (global?) symmetry of these spin chains, it can be useful to convert to the Abrikosov fermion representation. Since we are working with the spin -1 model, we use 3 fermion channels at each site with a local fermion number constraint $\sum^{3}_{\mu = 1} c^{\dagger}_{j, \mu} c_{j, \mu} = 1.$ \AM{Show how there is SU(2) when the bond/pairing term is present}
 For a generic coupling coupling $\gamma$ the model looks like:
 \begin{equation}
     H_{\text{BLBQ}}(\gamma) = \sum_{j} c^{\dagger}_{j, \alpha} c_{j, \beta} ~c^{\dagger}_{j+1, \beta}c_{j+1, \alpha} + (\gamma -1)  c^{\dagger}_{j, \alpha} c_{j, \beta} c^{\dagger}_{j+1, \alpha} c_{j, \beta},
 \end{equation}
 where, the first term describes a hopping between channels at adjacent sites and the second term describes a ``single-bond" pairing between adjacent sites.
  At $\gamma = \frac{4}{3}$ we are at the AKLT point, and at $\gamma = 1$ we are at the Umini Lai Sutherland (ULS) point. Notice immediately that under a transformation of $c_{j, \mu} \to Uc_{j, \mu}$ we remain invariant at the ULS point. This tells us that the ULS point has global SU$(3)$ symmetry.
+
+ The ground state of the SU(3) point is the Trimer liquid state. \AM{Need to understand this construction better.} 
+ 
+ Also understand this statement: \emph{In general, critical phases of SU($\nu$) symmetric spin chains are stabilised by $\mathbb{Z}_\nu$, the center of SU($\nu$).}
 \subsection{Babujian-Takhtajan point}
 \subsection{How does the WZW show up in spin S chains?}
 Sources: \cite{Affleck:1987ch, itoi1997extended}.
@@ -163,6 +171,42 @@ where the lagrangians are given by
     \mathcal{L}_{\text{matter}} = 2 \bar{\psi}^{\dagger}_{L, \alpha} \bar{\partial} \psi_{L, \alpha} + 2\psi^{\dagger}_{R, \alpha} \partial \psi_{R, \alpha} ,\quad 
     \mathcal{L}_{\text{gauge}} = -\partial \phi \bar{\partial} \phi,\quad  \mathcal{L}_{\text{ghost}} = 2 \bar{\eta} \partial \bar{\epsilon} + 2 \eta \bar{\partial} \epsilon
 \end{equation}
+\section{Edge modes and Kitaev chain POV}
+There is a direct mapping from the Kitaev chain to the spin 1 models. It allows us to see all the subtleties encountered with respect to edge modes/gapped states in the spin 1 case through a simple ``correspondence" to the majoranas on the kitaev chain. Here is some calculations to work out that may give some insight.\AM{Vaguely remember this discussion, make this precise}
+\begin{enumerate}
+    \item Strong pairing to weak pairing transition for spinless vs spinful fermions.
+    \item (Related) See the $\frac{t}{U}$ map of Hubabrd model to Heisenberg chain, and see what shows up in the leading order of Pert theory.
+\end{enumerate}
+\section{Bosonization}
+Here is a list of refs
+\begin{enumerate}
+    \item David Tong gauge theory notes
+    \item Senechal review
+    \item Jan von delft review
+    \item Shankar
+\end{enumerate}
+\AM{Want to see correlation function calculations eventually}
+\section{A vaguely stated connection...}
+After seeing a collection of different (but related) ideas pop-up at different places, I wanted to summarise them in a nice way and maybe see if I can atleast give a semblance of ``proof" for these statements. I am quite confident that the way in which it is written down below is completely wrong, but nevertheless I want to keep track of it and try finding counterexamples to disprove every incorrect implication.
+
+\begin{conn}
+    Systems with a disordered state $~\longleftrightarrow~$ Exponential Decay of correlation functions 
+    $~\longleftrightarrow~$ Gapped spectrum of the Hamiltonian
+    $~\longleftrightarrow~$ Existence of short-range interacting/localized/massive excitations
+    $~\longleftrightarrow~$ Propagation speed of excitations is less than a ``prescribed speed limit".
+    $~\longleftrightarrow~$ System described at some limit by a TQFT + impurity (=quasiparticles) \AM{Check Witten's lec, also in a TQFT there are no propagating modes.}
+\end{conn}
+
+Now here is a complementary connection
+\begin{conn}
+    System at Criticality 
+    $~\longleftrightarrow~$ Power law decay of correlation functions
+    $~\longleftrightarrow~$ Gapless spectrum of Hamiltonian
+    $~\longleftrightarrow~$ Massless excitations/Long Range excitation
+    $~\longleftrightarrow~$ Propagation speed of excitation equals speed limit
+    $~\longleftrightarrow~$ System described at some limit by a CFT.
+\end{conn}
+A related question: What sets the speed limit? I guess partially answered by Lieb-Robinson, but want some more intuition. There is also a further relation to chirality of excitations, but I am not able to make a concrete statement yet.
 \bibliographystyle{apsrev4-1long}
 \bibliography{bibliography}
 
