--- a/bibliography.bib
+++ b/bibliography.bib
@@ -18,3 +18,41 @@
   year={1997},
   publisher={APS}
 }
+@article{verresen2017one,
+  title={One-dimensional symmetry protected topological phases and their transitions},
+  author={Verresen, Ruben and Moessner, Roderich and Pollmann, Frank},
+  journal={Physical Review B},
+  volume={96},
+  number={16},
+  pages={165124},
+  year={2017},
+  publisher={APS}
+}
+@article{PhysRevLett.50.1153,
+  title = {Nonlinear Field Theory of Large-Spin Heisenberg Antiferromagnets: Semiclassically Quantized Solitons of the One-Dimensional Easy-Axis N\'eel State},
+  author = {Haldane, F. D. M.},
+  journal = {Phys. Rev. Lett.},
+  volume = {50},
+  issue = {15},
+  pages = {1153--1156},
+  numpages = {0},
+  year = {1983},
+  month = {Apr},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.50.1153},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.50.1153}
+}
+@article{PhysRevD.29.1107,
+  title = {Impossibility of naively generalizing squeezed coherent states},
+  author = {Fisher, Robert A. and Nieto, Michael Martin and Sandberg, Vernon D.},
+  journal = {Phys. Rev. D},
+  volume = {29},
+  issue = {6},
+  pages = {1107--1110},
+  numpages = {0},
+  year = {1984},
+  month = {Mar},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.29.1107},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.29.1107}
+}
