--- a/main.tex
+++ b/main.tex
@@ -175,6 +175,15 @@ where the lagrangians are given by
     \mathcal{L}_{\text{matter}} = 2 \bar{\psi}^{\dagger}_{L, \alpha} \bar{\partial} \psi_{L, \alpha} + 2\psi^{\dagger}_{R, \alpha} \partial \psi_{R, \alpha} ,\quad 
     \mathcal{L}_{\text{gauge}} = -\partial \phi \bar{\partial} \phi,\quad  \mathcal{L}_{\text{ghost}} = 2 \bar{\eta} \partial \bar{\epsilon} + 2 \eta \bar{\partial} \epsilon
 \end{equation}
+
+\AM{Make this proper}
+Little about WZW models.
+These are a simple example of solvable(in the sense of yang baxter) RCFTs. In these theories we have a gauge group describing some internal symmetry of the theory but also gets enhanced (extended chiral algebra) by the conformal algebra to form an affine lie algebra (kac moody algebra). General philosophy:more symmetry is good news! the theory will turn out to be simple (because it is highly constrained by the symmetries), i.e has few primary operators and the rest derivable using the algebra.  
+
+It is possible to write the WZW theory in terms of elements of the gauge group, and that will turn out to be purely bosonic. However for certain WZW theories like su(n), so(n) and u(n), one can equivalently describe the theory in terms of multiple species of free (Real) fermions. For example, see the action of the SU(3) level 1 WZW described above for ULS. See Lorenz Ebenhardt's notes/lectures.
+
+A Dubious idea:\AM{and most probably completely false}
+We can get SPTs in higher dims by stacking 1d SPTs. Is this somehow connected to the fact that WZW describes the boundary of a chern-simons theory? Because we could have some 1d spin chain which has an SPT phase and has an IR description by a WZW theory, and by stacking them the bulk gets gapped (topological) and is described by a CS theory?
 \section{Edge modes and Kitaev chain POV}
 There is a direct mapping from the Kitaev chain to the spin 1 models. It allows us to see all the subtleties encountered with respect to edge modes/gapped states in the spin 1 case through a simple ``correspondence" to the majoranas on the kitaev chain. Here is some calculations to work out that may give some insight.\AM{Vaguely remember this discussion, make this precise}
 
