--- a/bibliography.bib
+++ b/bibliography.bib
@@ -56,3 +56,16 @@
   doi = {10.1103/PhysRevD.29.1107},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.29.1107}
 }
+@book{sadovskii2006diagrammatics,
+  title={Diagrammatics: lectures on selected problems in condensed matter theory},
+  author={Sadovskii, Michael V},
+  year={2006},
+  publisher={World Scientific}
+}
+@book{giamarchi2003quantum,
+  title={Quantum physics in one dimension},
+  author={Giamarchi, Thierry},
+  volume={121},
+  year={2003},
+  publisher={Clarendon press}
+}
