lil more bosonization

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -69,3 +69,19 @@
   year={2003},
   publisher={Clarendon press}
 }
+@article{von1998bosonization,
+  title={Bosonization for beginners—refermionization for experts},
+  author={Von Delft, Jan and Schoeller, Herbert},
+  journal={Annalen der Physik},
+  volume={510},
+  number={4},
+  pages={225--305},
+  year={1998},
+  publisher={Wiley Online Library}
+}
+@MISC {656563,
+    TITLE = {Anomalous commutators in bosonization},
+    AUTHOR = {Zack (https://physics.stackexchange.com/users/223947/zack)},
+    HOWPUBLISHED = {Physics Stack Exchange},
+    URL = {https://physics.stackexchange.com/q/656563}
+}
