Some confusing stuff

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -85,3 +85,28 @@
     HOWPUBLISHED = {Physics Stack Exchange},
     URL = {https://physics.stackexchange.com/q/656563}
 }
+@MISC {65897,
+    TITLE = {Why we call the ground state of Kitaev model a Spin Liquid?},
+    AUTHOR = {Everett You (https://physics.stackexchange.com/users/7616/everett-you)},
+    HOWPUBLISHED = {Physics Stack Exchange},
+    URL = {https://physics.stackexchange.com/q/65897}
+}
+@MISC {251464,
+    TITLE = {What does it mean for a topological phase to be symmetry protected?},
+    AUTHOR = {Ruben Verresen (https://physics.stackexchange.com/users/15693/ruben-verresen)},
+    HOWPUBLISHED = {Physics Stack Exchange},
+    URL = {https://physics.stackexchange.com/q/251464}
+}
+@MISC {71160,
+    TITLE = {Topological order vs. Symmetry breaking: what does (non-)local order parameter mean?},
+    AUTHOR = {Heidar (https://physics.stackexchange.com/users/1469/heidar)},
+    HOWPUBLISHED = {Physics Stack Exchange},
+    URL = {https://physics.stackexchange.com/q/71160}
+}
+  @misc{enwiki:1314883973,
+    author = "{Wikipedia contributors}",
+    title = "Symmetry-protected topological order --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2025",
+    url = "https://en.wikipedia.org/w/index.php?title=Symmetry-protected_topological_order&oldid=1314883973",
+    note = "[Online; accessed 21-October-2025]"
+  }
