--- a/main.tex
+++ b/main.tex
@@ -298,6 +298,34 @@ A related question: What sets the speed limit? I guess partially answered by Lie
 Regarding chirality: Basically, it makes sense to talk about chiral modes on the edge when the bulk is gapped. If you had a gapless bulk then these edge modes are not ``independent" so it does not make sense to talk of the chirality of the modes. Though it is not true that chiral modes are always accompanied by a gapped bulk.\AM{Please find the counterexample!}
 
 A potential counter example to connection 1: Kitaev model (in the context of kitaev spin liquids; with hexagonal lattice in 2+1d) is gapless yet does not have power-law behaviour of spin correlators. They have this weird thing where they vanish sharply beyond a point on the lattice, instead of a smooth decay.\AM{Check this!}
+\subsection{SPT vs Intrinsic topological order}
+Some examples for SPT: the AKLT phase; Intrinsic top order: (fractional) quantum hall phase, spin liquid phase. Thank you stackexchange! \cite{251464, 71160, 65897}. Here are some claims \cite{enwiki:1314883973}:
+\begin{enumerate}
+    \item STUFF (= quantum phases of matter) has either SPT or has intrinsic topological order.
+    \item SPT phases have short range entanglement. SPT phases are gapped.
+    \item There is no intrinsic Topological order in 1d (1+1d). That is, all gapped states are short range entangled.
+\end{enumerate}
+\subsection{Classification of 1d Bosonic, Fermionic SPT phases}
+Stuff about group cohomology classes/projective representations.
+\subsection{What is a spin liquid anyway??}
+This is the most common question I get from people when I explain what I am working on, and it is kind of sad that I can't give a simple, convincing answer. Here is an attempt to atleast list out some well known properties and give some examples so that I can work towards a proper answer.
+\begin{enumerate}
+    \item It has long range entanglement. Also has intrinsic topological order \AM{Explain this!!}
+    \item It is gapped. Caveat: (non-trivial)Gapless spin-liquids are not well defined.But can be roughly thought of as a deconfined phase of a masless gauge theory
+    \item Fractionalized excitations: spinons/holons. \AM{Explain in context of FQHE and spin-charge separation in luttinger liquids}
+\end{enumerate}
+Some vague descriptions
+\begin{enumerate}
+    \item It is a phase dominated by quantum fluctuations. We see it at zero temperature.
+    \item "Collective excitations".
+    \item Non-local order parameter.
+\end{enumerate}
+Some common questions:
+\begin{enumerate}
+    \item Is it the same as spin glass/ spin ice?? A:No. But is there a connection? A:Perhaps..\AM{Think please!}
+    \item What is a phase of matter? A: Gulps..
+    \item What is a symmetry-broken phase of matter? \AM{Start here, then tell how SPT is different, then go to Top.order}
+\end{enumerate}
 \bibliographystyle{apsrev4-1long}
 \bibliography{bibliography}
 
