and the list grows on

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -110,3 +110,35 @@
     url = "https://en.wikipedia.org/w/index.php?title=Symmetry-protected_topological_order&oldid=1314883973",
     note = "[Online; accessed 21-October-2025]"
   }
+@MISC {681893,
+    TITLE = {At the critical point, is Kramers-Wannier duality a unitary symmetry of the model?},
+    AUTHOR = {Meng Cheng (https://physics.stackexchange.com/users/68743/meng-cheng)},
+    HOWPUBLISHED = {Physics Stack Exchange},
+    NOTE = {URL:https://physics.stackexchange.com/q/681893 (version: 2021-12-10)},
+    EPRINT = {https://physics.stackexchange.com/q/681893},
+    URL = {https://physics.stackexchange.com/q/681893}
+}
+@article{Aasen_2016,
+   title={Topological defects on the lattice: I. The Ising model},
+   volume={49},
+   ISSN={1751-8121},
+   url={http://dx.doi.org/10.1088/1751-8113/49/35/354001},
+   DOI={10.1088/1751-8113/49/35/354001},
+   number={35},
+   journal={Journal of Physics A: Mathematical and Theoretical},
+   publisher={IOP Publishing},
+   author={Aasen, David and Mong, Roger S K and Fendley, Paul},
+   year={2016},
+   month=aug, pages={354001} }
+@article{Chang_2019,
+   title={Topological defect lines and renormalization group flows in two dimensions},
+   volume={2019},
+   ISSN={1029-8479},
+   url={http://dx.doi.org/10.1007/JHEP01(2019)026},
+   DOI={10.1007/jhep01(2019)026},
+   number={1},
+   journal={Journal of High Energy Physics},
+   publisher={Springer Science and Business Media LLC},
+   author={Chang, Chi-Ming and Lin, Ying-Hsuan and Shao, Shu-Heng and Wang, Yifan and Yin, Xi},
+   year={2019},
+   month=jan }
