--- a/main.tex
+++ b/main.tex
@@ -326,6 +326,25 @@ Some common questions:
     \item What is a phase of matter? A: Gulps..
     \item What is a symmetry-broken phase of matter? \AM{Start here, then tell how SPT is different, then go to Top.order}
 \end{enumerate}
+\section{Monopoles, Instantons}
+Some sources to get started: Tong(TASI Solitons), Figuera O farill(Em duality for children), t'hooft and eta'il notes. Want to understand them form gauge theory point of view.  Want to eventually understand ADHM construction. 
+\section{Interesting stuff from Statmech}
+\subsection{Kac ward 2d ising}
+\subsection{Kadanoff Ceva disorder operators}
+\subsection{Star-triangle duality, yang baxter}
+\subsection{Krammers-wannier duality/non-invertible symmetry}
+\cite{681893}
+\subsection{Aasen-Fendley-Mong construction (Topological defect lines)}
+\cite{Aasen_2016}. For a CFT pov see \cite{Chang_2019}
+\subsection{ice-type model(6 vertex), residual entropy}
+\subsection{8 vertex model, breakdown of universality, connection to ashkin teller}
+\subsection{8 vertex as 2 ising + 4spin int, Kadanoff wegner argument}
+is there a connection to the 4 spin interaction seen in coupled wire constructions of spin liquids?
+\subsection{d+1 statmech = d qm, polyakov}
+
+\section{Biting the bullet that is tensor networks}
+See \href{https://videos.univ-grenoble-alpes.fr/video/33697-2025_08_14_11_08_verstraete-1/}{Frank verstraete lecs from houches 2025}
+
 \bibliographystyle{apsrev4-1long}
 \bibliography{bibliography}
 
