--- a/bibliography.bib
+++ b/bibliography.bib
@@ -142,3 +142,34 @@
    author={Chang, Chi-Ming and Lin, Ying-Hsuan and Shao, Shu-Heng and Wang, Yifan and Yin, Xi},
    year={2019},
    month=jan }
+@misc{fendley2025xyzintegrabilityeasyway,
+      title={XYZ integrability the easy way}, 
+      author={Paul Fendley and Sascha Gehrmann and Eric Vernier and Frank Verstraete},
+      year={2025},
+      eprint={2511.04674},
+      archivePrefix={arXiv},
+      primaryClass={cond-mat.stat-mech},
+      url={https://arxiv.org/abs/2511.04674}, 
+}
+@article{Haegeman_2015,
+   title={Gauging Quantum States: From Global to Local Symmetries in Many-Body Systems},
+   volume={5},
+   ISSN={2160-3308},
+   url={http://dx.doi.org/10.1103/PhysRevX.5.011024},
+   DOI={10.1103/physrevx.5.011024},
+   number={1},
+   journal={Physical Review X},
+   publisher={American Physical Society (APS)},
+   author={Haegeman, Jutho and Van Acoleyen, Karel and Schuch, Norbert and Cirac, J. Ignacio and Verstraete, Frank},
+   year={2015},
+   month=feb }
+@book{Franchini_2017,
+   title={An Introduction to Integrable Techniques for One-Dimensional Quantum Systems},
+   ISBN={9783319484877},
+   ISSN={1616-6361},
+   url={http://dx.doi.org/10.1007/978-3-319-48487-7},
+   DOI={10.1007/978-3-319-48487-7},
+   journal={Lecture Notes in Physics},
+   publisher={Springer International Publishing},
+   author={Franchini, Fabio},
+   year={2017} }
