--- a/main.tex
+++ b/main.tex
@@ -329,19 +329,29 @@ Some common questions:
 \section{Monopoles, Instantons}
 Some sources to get started: Tong(TASI Solitons), Figuera O farill(Em duality for children), t'hooft and eta'il notes. Want to understand them form gauge theory point of view.  Want to eventually understand ADHM construction. 
 \section{Interesting stuff from Statmech}
-\subsection{Kac ward 2d ising}
+\subsection{2d ising combinatorics}
+\paragraph{Kac Ward}
+\paragraph{Pfaffian approach}
 \subsection{Kadanoff Ceva disorder operators}
-\subsection{Star-triangle duality, yang baxter}
+\subsection{Star-triangle duality, Yang Baxter}
 \subsection{Krammers-wannier duality/non-invertible symmetry}
 \cite{681893}
 \subsection{Aasen-Fendley-Mong construction (Topological defect lines)}
 \cite{Aasen_2016}. For a CFT pov see \cite{Chang_2019}
 \subsection{ice-type model(6 vertex), residual entropy}
-\subsection{8 vertex model, breakdown of universality, connection to ashkin teller}
-\subsection{8 vertex as 2 ising + 4spin int, Kadanoff wegner argument}
+\subsection{8 vertex model, breakdown of universality, connection to Ashkin Teller}
+see papers by Fan, Wegner.
+\subsection{8 vertex as 2 ising + 4spin int, Kadanoff Wegner argument}
 is there a connection to the 4 spin interaction seen in coupled wire constructions of spin liquids?
+\subsection{XYZ commutes with 8v, and thus came yang baxter}
+See \cite{fendley2025xyzintegrabilityeasyway} for MPO perspective 
+\subsection{More on integrability of 1d models: CBA, ABA, ...}
+Start here \cite{Franchini_2017}
+\subsection{For intro to topological defects/vortices start with XY model}
+See Hal Tasaki's videos and also these \href{https://www.mit.edu/~levitov/8.334/notes/XYnotes1.pdf}{notes from Jensen} and \href{https://www.mit.edu/~levitov/8.334/notes/m6.pdf}{from Levitov/dogson.} See also about XY-Villain duality.
 \subsection{d+1 statmech = d qm, polyakov}
-
+\section{Some notes on ``gauging"}
+Start from \cite{Haegeman_2015}
 \section{Biting the bullet that is tensor networks}
 See \href{https://videos.univ-grenoble-alpes.fr/video/33697-2025_08_14_11_08_verstraete-1/}{Frank verstraete lecs from houches 2025}
 
